--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,14 @@
 # in the templates via {{ site.myvariable }}.
 
 author: "Anne Macedo"
-title: retpolanne blog
+title: retpolanne foodposting blog
 email: retpolanne@posteo.net
 description: >- # this means to ignore newlines until "baseurl:"
-  Your friendly programmer catgirl 🏳️‍⚧️😺
-baseurl: "" # the subpath of your site, e.g. /blog
+  Catgirl Masterchef 🏳️‍⚧️😺
+baseurl: "/foodposting" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  retpolanne
 github_profile: "https://github.com/retpolanne"
-resume: "/assets/resume.pdf"
 
 # Build settings
 plugins:
